[gd_scene load_steps=7 format=3 uid="uid://7yj7tdeo2lhr"]

[ext_resource type="Script" uid="uid://kbtgqtuffrd" path="res://upgrades/upgrade_button.gd" id="1_4o4m5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ebbir"]

[sub_resource type="Animation" id="Animation_4o4m5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("buy_button:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("nem_lbl:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("buy_button:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["price"]
}

[sub_resource type="Animation" id="Animation_ebbir"]
resource_name = "bought"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("buy_button:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("buy_button:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Куплено"]
}

[sub_resource type="Animation" id="Animation_1v606"]
resource_name = "nem"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("buy_button:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("nem_lbl:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4o4m5"]
_data = {
&"RESET": SubResource("Animation_4o4m5"),
&"bought": SubResource("Animation_ebbir"),
&"nem": SubResource("Animation_1v606")
}

[node name="upgrade" type="Panel"]
custom_minimum_size = Vector2(534, 82)
offset_right = 534.0
offset_bottom = 82.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ebbir")
script = ExtResource("1_4o4m5")

[node name="buy_button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.0
offset_top = -39.0
offset_right = -10.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "price"

[node name="upgrade_name" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 93.0
offset_top = 2.0
offset_right = 266.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 24
text = "upgrade_name"

[node name="upgrade_description" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 97.0
offset_top = 45.0
offset_right = 256.0
offset_bottom = 68.0
text = "upgrade_description"

[node name="nem_lbl" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 344.0
offset_top = 6.0
offset_right = 526.0
offset_bottom = 29.0
text = "Недостаточно средств"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_4o4m5")
}

[node name="upgrade_icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 6.0
offset_top = -34.5
offset_right = 75.0
offset_bottom = 34.5
grow_vertical = 2
